tests/paczka2/big_fuzzy/73126252.err
Error in line 4: yG6s2 S596 33,03
Error in line 2: L3Jw S609 73,6
Error in line 1: D11K5YUpJ4T A181 53,8
Error in line 13: L3Jw S596 40,0
Error in line 27: 6LCCnvzBO A181 70,5
Error in line 28: yG6s2 S596 6,9
Error in line 54: b9Gq5E5uu A181 50,9
Error in line 57: b9Gq5E5uu A645 94,8
Error in line 63: 9JEmdxOR8DI A645 11,0
Error in line 74: b9Gq5E5uu S609 48,1
Error in line 76: L3Jw S596 66,5
Error in line 82: L3Jw A181 62,6
Error in line 83: L3Jw S596 33,5
Error in line 89: b9Gq5E5uu A645 31,6
Error in line 87: L3Jw S609 80,0
Error in line 93: yG6s2 S609 1,6
Error in line 98: b9Gq5E5uu S609 3,9
Error in line 96: L3Jw A181 78,0
Error in line 104: 9JEmdxOR8DI A645 52,4
Error in line 116: 9JEmdxOR8DI S596 74,9
Error in line 115: 6LCCnvzBO A645 95,7
Error in line 136: b9Gq5E5uu S609 18,5
Error in line 135: S596 S609 212,8
Error in line 131: 6LCCnvzBO S596 86,9
Error in line 146: S596 A181 1,3
Error in line 153: D11K5YUpJ4T A645 55,5
Error in line 155: yG6s2 A181 60,0
Error in line 121: L3Jw A645 216,6
Error in line 158: yG6s2 S596 11,7
Error in line 152: S596 A645 84,0
Error in line 137: 9JEmdxOR8DI S609 60,1
Error in line 165: S596 A181 33,4
Error in line 159: L3Jw S609 40,3
Error in line 183: L3Jw A645 15,3
Error in line 188: S596 A181 3,7
Error in line 194: b9Gq5E5uu A181 97,2
Error in line 204: 9JEmdxOR8DI S596 77,2
Error in line 199: 6LCCnvzBO A645 45,5
Error in line 208: yG6s2 A645 89,6
Error in line 205: 9JEmdxOR8DI A645 87,6
Error in line 214: yG6s2 S609 52,4
Error in line 216: yG6s2 A645 27,4
Error in line 225: 9JEmdxOR8DI S596 69,2
Error in line 232: L3Jw A645 21,6
Error in line 233: L3Jw S596 28,7
